@@ -3,6 +3,7 @@
    Plugins are now reloaded and if they support reload messages can do whatever they want.
  * Added retry command line option to clients
  * Unwrapped the macros from plugins.?pp
+ * Added error messages when saving HTTP settings
 
 2014-07-10 MickeM
  * Changed so plugin generator uses jinja (instead of strings)
